Added experimental navigation style and techniques

--- a/app/views/providerCategories.xml
+++ b/app/views/providerCategories.xml
@@ -1,7 +1,14 @@
 <Alloy>
-	<TabGroup id="tabGroup" onOpen="Alloy.Globals.updateActionBar" activeTabIconTint="#65c8c7">
+	<TabGroup id="tabGroup" onOpen="Alloy.Globals.updateActionBar" activeTabIconTint="#65c8c7" title="AVIATOR">
 		<Tab title="GENERAL" icon="/tabs/home63.png">
 			<Window class="container" id="win">
+				<LeftNavButton platform="ios">
+					<Button backgroundImage="left224.png" onClick="closeWindow" />
+				</LeftNavButton>
+				<RightNavButtons width="50%">
+					<Button backgroundImage="/global/add126.png" right="5dp"/>
+					<Button backgroundImage="/global/blind2.png" left="50%"/>
+				</RightNavButtons>
 				<ActivityIndicator id="generalIndicator"/>
 				<TableView id="generalTable" class="menu" onClick="listProviders">
 				</TableView>
