--- a/app/views/serviceProviderListView.xml
+++ b/app/views/serviceProviderListView.xml
@@ -2,7 +2,7 @@
 	<ActivityIndicator id="activityIndicator"/>
 	<View id="listView">
 		<Label id="noResults" zIndex=1 visible=false>No results.</Label>
-		<TableView id="providerList" class="menu" onClick="providerDetail" visible=true filterAttribute="title" />
+		<TableView id="providerList" class="menu" onClick="providerDetail" visible=true />
 	</View>
 	<View id="mapModule" height="90%" visible=false top=0>
 		<Module id="map" module="ti.map" onClick="mapClick"/>
