--- a/app/views/serviceProviders.xml
+++ b/app/views/serviceProviders.xml
@@ -2,12 +2,14 @@
 	<TabGroup id="tabGroup" onOpen="Alloy.Globals.updateActionBar" onClose="close">
 		<Tab title="NEARBY" icon="/tabs/building78.png">
 			<Window id="win">
+				<Require id="iosNavNearby" src="iosNavigation" platform="ios"/>
 				<Require id="providerList" src="serviceProviderListView" providerType="general"/>
 				<Require id="providerButtonBar" src="serviceProviderButtonBar" />
 			</Window>
 		</Tab>
 		<Tab title="QUICK CALL" icon="/tabs/quickcall.png">
 			<Window id="win">
+			<Require id="iosNavQuickCall" src="iosNavigation" platform="ios"/>
 			<ActivityIndicator id="quickActivityIndicator"/>
 			<Label id="quickNoResults" zIndex=1 visible=false>No results.</Label>
 			<TableView id="crisisMenu" class="menu" onClick="callPhoneNumber" filterAttribute="title">
