--- a/app/views/countySelectorView.xml
+++ b/app/views/countySelectorView.xml
@@ -1,5 +1,5 @@
 <Alloy>
-	<SearchBar platform="android"  id="searchBar" />
+	<SearchBar id="searchBar" />
 	<ScrollView scrollType="vertical" >
 		<View id="countiesPicker"/>
 	</ScrollView>
