--- a/app/views/providerDetail.xml
+++ b/app/views/providerDetail.xml
@@ -1,5 +1,47 @@
 <Alloy>
-	<Window class="container" id="win" onOpen="Alloy.Globals.updateActionBar">
+	<NavigationWindow platform="ios" id="navWin">
+		<Window class="container" id="win" onOpen="Alloy.Globals.updateActionBar">
+			<Require id="iosNav" src="iosNavigation" platform="ios"/>
+			<View class="divider"/>
+			<Label id="providerName"/>
+			
+			<TextArea id="providerDescription"/>
+			
+			<Label id="addressLabel">ADDRESS</Label>
+			<View id="addressView">
+				<Label id="address"/>
+				<Button id="driveButton" onClick="getDirections">Get Directions</Button>
+			</View>
+	
+			<View id="phoneView" class="actionView" onClick="callPhoneNumber">
+				<ImageView class="actionImage" image="/global/phone_256.png" />
+				<Label id="phoneLabel" class="actionLabel"/>
+			</View>
+			<View id="emailView" class="actionView" onClick="openEmail">
+				<ImageView class="actionImage" image="/global/email256.png" />
+				<Label id="emailLabel" class="actionLabel">EMAIL THIS PROVIDER</Label>
+			</View>
+			<View id="websiteView" class="actionView" onClick="openWebsite">
+				<ImageView class="actionImage" image="/global/domain256.png" />
+				<Label id="webLabel" class="actionLabel">VISIT WEBSITE</Label>
+			</View>
+			<View id="downloadAppView" class="actionView" onClick="downloadApp">
+				<ImageView class="actionImage" image="/global/cellphone57.png" />
+				<Label id="downloadLabel" class="actionLabel">DOWNLOAD APP</Label>
+			</View>
+			
+			<AlertDialog id="dialog" onClick="doClick" title="Disclaimer" 
+				message="Since this website is not directly affiliated with AVIATOR, we are not responsible for the content on this 3rd party site." cancel="1">
+				<ButtonNames>
+					<ButtonName>OK</ButtonName>
+					<ButtonName>Cancel</ButtonName>
+				</ButtonNames>
+			</AlertDialog>
+		</Window>
+	</NavigationWindow>
+	
+	
+	<Window platform="android" class="container" id="win" onOpen="Alloy.Globals.updateActionBar">
 		<View class="divider"/>
 		<Label id="providerName"/>
 		
