--- a/app/views/account.xml
+++ b/app/views/account.xml
@@ -25,13 +25,13 @@
 					<View layout="horizontal" width="90%" top="5dp">
 						<Label class="sentence">My name is</Label>
 						<TextField id="nameField" class="sentence" editable=false focusable=false value="{profileBasics.name}" onClick="updateProfile"/>
-						<Label class="sentence">and I want</Label>
-						<Label class="sentence">to see</Label> 
-						<Label class="sentence">services in</Label>
+						<Label class="sentence">and</Label><Label class="sentence">I</Label><Label class="sentence">want</Label>
+						<Label class="sentence">to</Label><Label class="sentence">see</Label>
+						<Label class="sentence">services</Label><Label class="sentence">in</Label>
 						<TextField id="county" class="sentence" editable=false focusable=false value="{profileBasics.countyName}" onClick="pickCounty"/>
 						<Label class="sentence">county.</Label>
 					</View>
-					<View layout="horizontal" width="90%" top="60%" height="50%">
+					<View layout="horizontal" width="90%" top="50%" height="50%">
 						<Label class="sentence">My 'quick-hide'</Label>
 						<Label class="sentence">website is</Label>
 						<TextField id="website" class="sentence" editable=false focusable=false value="{profileBasics.website}" onClick="updateProfile"/>
@@ -57,8 +57,8 @@
 					message="How would you like to add this new trusted contact?" cancel="2">
 					<ButtonNames>
 						<ButtonName>Manually</ButtonName>
-						<ButtonName>From My Contact List</ButtonName>
-						<ButtonName>Cancel</ButtonName>
+						<ButtonName>via Contacts</ButtonName>
+						<ButtonName>Close</ButtonName>
 					</ButtonNames>
 				</AlertDialog>
 			</View>
