--- a/app/views/corrections.xml
+++ b/app/views/corrections.xml
@@ -2,6 +2,14 @@
 	<TabGroup id="tabGroup" onOpen="Alloy.Globals.updateActionBar" onClose="close">
 		<Tab title="LOCAL LAW" icon="/tabs/justice4.png">
 			<Window class="container" id="win">
+				<RightNavButtons platform="ios">
+					<View height="Ti.UI.SIZE">
+						<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
+					</View>
+					<View width=55 height="Ti.UI.SIZE">
+						<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
+					</View>
+				</RightNavButtons>
 				<Require id="providerList" src="serviceProviderListView" providerType="corrections"/>
 				<Require id="providerButtonBar" src="serviceProviderButtonBar" />
 			</Window>
