--- a/app/views/providerDetail.xml
+++ b/app/views/providerDetail.xml
@@ -1,5 +1,19 @@
 <Alloy>
-	<Window class="container" id="win" onOpen="Alloy.Globals.updateActionBar">
+	<Window id="win" onOpen="Alloy.Globals.updateActionBar">
+		<RightNavButtons platform="ios">
+			<View height="Ti.UI.SIZE">
+				<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
+			</View>
+			<View width=55 height="Ti.UI.SIZE">
+				<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
+			</View>
+			<View width=45 height="Ti.UI.SIZE">
+				<Button id="navShare" backgroundImage="/images/social24.png"  />
+			</View>
+			<View width=45 height="Ti.UI.SIZE">
+				<Button id="navFavorite" backgroundImage="/images/star129.png" onClick="tagAsFavorite"  />
+			</View>
+		</RightNavButtons>
 		<View class="divider"/>
 		<Label id="providerName"/>
 		
