--- a/app/views/serviceProviders.xml
+++ b/app/views/serviceProviders.xml
@@ -2,14 +2,28 @@
 	<TabGroup id="tabGroup" onOpen="Alloy.Globals.updateActionBar" onClose="close">
 		<Tab title="NEARBY" icon="/tabs/building78.png">
 			<Window id="win">
-				<Require id="iosNavNearby" src="iosNavigation" platform="ios"/>
+				<RightNavButtons platform="ios">
+					<View height="Ti.UI.SIZE">
+						<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
+					</View>
+					<View width=55 height="Ti.UI.SIZE">
+						<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
+					</View>
+				</RightNavButtons>
 				<Require id="providerList" src="serviceProviderListView" providerType="general"/>
 				<Require id="providerButtonBar" src="serviceProviderButtonBar" />
 			</Window>
 		</Tab>
 		<Tab title="QUICK CALL" icon="/tabs/quickcall.png">
 			<Window id="win">
-				<Require id="iosNavQuickCall" src="iosNavigation" platform="ios"/>
+				<RightNavButtons platform="ios">
+					<View height="Ti.UI.SIZE">
+						<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
+					</View>
+					<View width=55 height="Ti.UI.SIZE">
+						<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
+					</View>
+				</RightNavButtons>
 				<ActivityIndicator id="quickActivityIndicator"/>
 				<Label id="quickNoResults" zIndex=1 visible=false>No results.</Label>
 				<TableView id="crisisMenu" class="menu" onClick="callPhoneNumber" filterAttribute="title">
