--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -1,10 +1,18 @@
 <Alloy>
 	<Window id="win" class="container" title="Home" layout="vertical" onOpen="Alloy.Globals.updateActionBar">
+		<RightNavButtons platform="ios">
+				<View height="Ti.UI.SIZE">
+					<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
+				</View>
+				<View width=55 height="Ti.UI.SIZE">
+					<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
+				</View>
+		</RightNavButtons>
 		<View class="divider"/>
 		<Label id="welcomeLabel">Welcome to AVIATOR - an initiative of Family Services • Dayton, Ohio</Label>
 		
 		<View class="boxContainer">
-			<View class="left box" onClick="openProviders">
+			<View class="left box" onClick="openProviders" >
 				<View class="divider"/>
 				<Label class="name" >PERSONAL RESOURCES</Label>
 				<ImageView class="icon" image="/global/familiar17.png" />
