--- a/app/views/providerCategories.xml
+++ b/app/views/providerCategories.xml
@@ -2,15 +2,30 @@
 	<TabGroup id="tabGroup" onOpen="Alloy.Globals.updateActionBar">
 		<Tab title="GENERAL" icon="/tabs/home63.png">
 			<Window class="container" id="win">
-				<Require id="iosNavGeneral" src="iosNavigation" platform="ios"/>
+				
 				<ActivityIndicator id="generalIndicator"/>
 				<TableView id="generalTable" class="menu" onClick="listProviders">
 				</TableView>
+				<RightNavButtons platform="ios" top=50>
+					<View height="Ti.UI.SIZE" backgroundColor="green">
+						<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
+					</View>
+					<View width=55 height="Ti.UI.SIZE">
+						<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
+					</View>
+				</RightNavButtons>
 			</Window>
 		</Tab>
 		<Tab title="CRIME" icon="/tabs/criminal.png" >
 			<Window class="container" id="win">
-				<Require id="iosNavCrime" src="iosNavigation" platform="ios"/>
+				<RightNavButtons platform="ios">
+					<View height="Ti.UI.SIZE">
+						<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
+					</View>
+					<View width=55 height="Ti.UI.SIZE">
+						<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
+					</View>
+				</RightNavButtons>
 				<ActivityIndicator id="crimeIndicator"/>
 				<TableView id="crimeTable" class="menu" onClick="listProviders">
 				</TableView>
