--- a/app/views/veteranServices.xml
+++ b/app/views/veteranServices.xml
@@ -1,5 +1,13 @@
 <Alloy>
 	<Window class="container" id="win" onOpen="Alloy.Globals.updateActionBar" onClose="close">
+		<RightNavButtons platform="ios">
+			<View height="Ti.UI.SIZE">
+				<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
+			</View>
+			<View width=55 height="Ti.UI.SIZE">
+				<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
+			</View>
+		</RightNavButtons>
 		<Require id="providerList" src="serviceProviderListView" providerType="veterans"/>
 		<Require id="providerButtonBar" src="serviceProviderButtonBar" />
 	</Window>
