--- a/app/views/providerDetail.xml
+++ b/app/views/providerDetail.xml
@@ -8,7 +8,7 @@
 				<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
 			</View>
 			<View width=45 height="Ti.UI.SIZE">
-				<Button id="navShare" backgroundImage="/images/social24.png"  />
+				<Button id="navShare" backgroundImage="/images/social24.png" onClick="iosShare"  />
 			</View>
 			<View width=45 height="Ti.UI.SIZE">
 				<Button id="navFavorite" backgroundImage="/images/star129.png" onClick="tagAsFavorite"  />
