Added logo to app, updated action bar in android to display current view at the top

--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -9,7 +9,7 @@
 				</View>
 		</RightNavButtons>
 		<View class="divider"/>
-		<Label id="welcomeLabel">Welcome to AVIATOR - an initiative of Family Services • Dayton, Ohio</Label>
+		<ImageView id="welcomeLabel" image="/global/AVIATOR_Logo_COLOR.png"/>
 		
 		<View class="boxContainer">
 			<View class="left box" onClick="openProviders" >
