Updated layout style for service provider row

--- a/app/views/serviceProviderRow.xml
+++ b/app/views/serviceProviderRow.xml
@@ -2,5 +2,6 @@
 	<TableViewRow id="row" class="defaultRow">
 		<Label id="providerName"/>
 		<Label id="subtext"/>
+		<Label id="miles" />
 	</TableViewRow>
 </Alloy>
