--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -13,13 +13,13 @@
 		
 		<View class="boxContainer">
 			<View class="left box" onClick="openProviders" >
-				<View class="divider" backgroundColor="#A65BA6"/>
+				<View class="divider" backgroundColor="#d06503"/>
 				<Label class="name" >PERSONAL RESOURCES</Label>
 				<ImageView class="icon" image="/global/familiar17.png" />
 				<Label class="description">View organizations that can help address your needs</Label>
 			</View>
 			<View class="right box" onClick="openCorrections" > 
-				<View class="divider" backgroundColor="#00A0A6"/>
+				<View class="divider" backgroundColor="#e9931a"/>
 				<Label class="name">LAW & CORRECTIONS</Label>
 				<ImageView class="icon" image="/global/hands6.png" />
 				<Label class="description">Contact local authorities or find jail time info about an offender</Label>
@@ -28,7 +28,7 @@
 		
 		<View class="boxContainer">
 			<View class="left box" onClick="openVictimCompensation">
-				<View class="divider" backgroundColor="#9D9FA2"/>
+				<View class="divider" backgroundColor="#9d9fa2"/>
 				<Label class="name" >VICTIM COMPENSATION</Label>
 				<ImageView class="icon" image="/global/compensation_256.png" />
 				<Label class="description">Victim of a violent crime? View financial assistance options here.</Label>
