--- a/app/views/serviceProviders.xml
+++ b/app/views/serviceProviders.xml
@@ -1,6 +1,6 @@
 <Alloy>
-	<TabGroup id="tabGroup" onOpen="Alloy.Globals.updateActionBar" onClose="close">
-		<Tab title="NEARBY" icon="/tabs/building78.png">
+	<TabGroup id="tabGroup" onOpen="Alloy.Globals.updateActionBar" onClose="close" platform="android">
+		<Tab title="LOCATE" icon="/tabs/building78.png">
 			<Window id="win">
 				<RightNavButtons platform="ios">
 					<View height="Ti.UI.SIZE">
@@ -27,9 +27,36 @@
 				<ActivityIndicator id="quickActivityIndicator"/>
 				<Label id="quickNoResults" zIndex=1 visible=false>No results.</Label>
 				<TableView id="crisisMenu" class="menu" onClick="callPhoneNumber" filterAttribute="title">
-					<SearchBar platform="ios" hintText="Search"></SearchBar>
 				</TableView>
 			</Window>
 		</Tab>
 	</TabGroup>
+	
+	<Window id="tabGroup" platform="ios">
+		<RightNavButtons platform="ios">
+			<View height="Ti.UI.SIZE">
+				<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
+			</View>
+			<View width=55 height="Ti.UI.SIZE">
+				<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
+			</View>
+		</RightNavButtons>
+		<View id="container" bottom="50" top="0" left="0" right="0">
+			<View id="tab1" visible="true">
+				<Require id="providerList" src="serviceProviderListView" providerType="general"/>
+				<Require id="providerButtonBar" src="serviceProviderButtonBar" />
+			</View>
+			<View id="tab2" visible="false">
+				<ActivityIndicator id="quickActivityIndicator"/>
+				<Label id="quickNoResults" zIndex=1 visible=false>No results.</Label>
+				<TableView id="crisisMenu" class="menu" onClick="callPhoneNumber">
+					<SearchBar hintText="Search"></SearchBar>
+				</TableView>
+			</View>
+		</View>
+		<View bottom="0" height=Ti.UI.SIZE backgroundColor="green">
+			<Button left="0" width="50%" id="leftTab" image="/tabs/building78.png" title="  LOCATE" class="iosTab" onClick="onLeftTabClick" tintColor="#009577"/>
+			<Button right="0" width="50%" id="rightTab" image="/tabs/quickcall.png" title="  QUICK CALL" class="iosTab" onClick="onRightTabClick" tintColor="#929292"/>
+		</View>
+	</Window>
 </Alloy>
