--- a/app/views/crisisLines.xml
+++ b/app/views/crisisLines.xml
@@ -8,7 +8,7 @@
 				<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
 			</View>
 		</RightNavButtons>
-		<View class="divider"/>
+		<View class="divider yellow"/>
 		<ActivityIndicator id="activityIndicator"/>
 		<TableView id="crisisLineTable" onClick="callPhoneNumber">
 			<SearchBar platform=ios />
