Updated results not found message to indicate to user that the filter and preferred county can be altered to produce a result. Removed unnecessary image.

--- a/app/views/serviceProviderListView.xml
+++ b/app/views/serviceProviderListView.xml
@@ -1,7 +1,7 @@
 <Alloy>
 	<ActivityIndicator id="activityIndicator"/>
 	<View id="listView">
-		<Label id="noResults" zIndex=1 visible=false>No results.</Label>
+		<Label id="noResults" visible=false>No results found. Try updating the filter or your preferred county.</Label>
 		<TableView id="providerList" class="menu" onClick="providerDetail" visible=true>
 			<SearchBar platform="ios"/>
 		</TableView>
