added help links, made crime table header, changed forward geocoder SMALL BUG: In filter, crime categories show up twice.

--- a/app/views/corrections.xml
+++ b/app/views/corrections.xml
@@ -27,9 +27,12 @@
 	<Window id="tabGroup" platform="ios">
 		<RightNavButtons platform="ios">
 			<View height="Ti.UI.SIZE">
-				<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
+				<Button id="navInfo" backgroundImage="/images/question30.png" onClick="Alloy.Globals.openProviderMessage" />
 			</View>
 			<View width=55 height="Ti.UI.SIZE">
+				<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
+			</View>
+			<View height="Ti.UI.SIZE">
 				<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
 			</View>
 		</RightNavButtons>
