--- a/app/views/crisisLines.xml
+++ b/app/views/crisisLines.xml
@@ -2,6 +2,9 @@
 	<Window class="container" id="win" onOpen="Alloy.Globals.updateActionBar">
 		<RightNavButtons platform="ios">
 			<View height="Ti.UI.SIZE">
+				<Button id="navInfo" backgroundImage="/images/question30.png" onClick="openMessage" />
+			</View>
+			<View height="Ti.UI.SIZE">
 				<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
 			</View>
 			<View width=55 height="Ti.UI.SIZE">
