--- a/app/views/serviceProviders.xml
+++ b/app/views/serviceProviders.xml
@@ -2,28 +2,12 @@
 	<TabGroup id="tabGroup" onOpen="Alloy.Globals.updateActionBar" onClose="close" platform="android">
 		<Tab title="LOCATE" icon="/tabs/building78.png">
 			<Window id="win">
-				<RightNavButtons platform="ios">
-					<View height="Ti.UI.SIZE">
-						<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
-					</View>
-					<View width=55 height="Ti.UI.SIZE">
-						<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
-					</View>
-				</RightNavButtons>
 				<Require id="providerList" src="serviceProviderListView" providerType="general"/>
 				<Require id="providerButtonBar" src="serviceProviderButtonBar" />
 			</Window>
 		</Tab>
 		<Tab title="QUICK CALL" icon="/tabs/quickcall.png">
 			<Window id="win">
-				<RightNavButtons platform="ios">
-					<View height="Ti.UI.SIZE">
-						<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
-					</View>
-					<View width=55 height="Ti.UI.SIZE">
-						<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
-					</View>
-				</RightNavButtons>
 				<ActivityIndicator id="quickActivityIndicator"/>
 				<Label id="quickNoResults" zIndex=1 visible=false>No results.</Label>
 				<TableView id="crisisMenu" class="menu" onClick="callPhoneNumber" filterAttribute="title">
@@ -36,9 +20,12 @@
 	<Window id="tabGroup" platform="ios">
 		<RightNavButtons platform="ios">
 			<View height="Ti.UI.SIZE">
+				<Button id="navInfo" backgroundImage="/images/question30.png" onClick="Alloy.Globals.openProviderMessage" />
+			</View>
+			<View width=45 height="Ti.UI.SIZE">
 				<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
 			</View>
-			<View width=55 height="Ti.UI.SIZE">
+			<View height="Ti.UI.SIZE">
 				<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
 			</View>
 		</RightNavButtons>
