--- a/app/views/corrections.xml
+++ b/app/views/corrections.xml
@@ -2,14 +2,6 @@
 	<TabGroup id="tabGroup" onOpen="Alloy.Globals.updateActionBar" onClose="close" platform="android">
 		<Tab title="LOCAL LAW" icon="/tabs/justice4.png">
 			<Window class="container" id="win">
-				<RightNavButtons platform="ios">
-					<View height="Ti.UI.SIZE">
-						<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
-					</View>
-					<View width=55 height="Ti.UI.SIZE">
-						<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
-					</View>
-				</RightNavButtons>
 				<Require id="providerList" src="serviceProviderListView" providerType="corrections"/>
 				<Require id="providerButtonBar" src="serviceProviderButtonBar" />
 			</Window>
@@ -25,14 +17,14 @@
 	
 	<!--IN ORDER FOR QUICK HIDE AND TRUSTED CONTACT BUTTONS TO BE VISIBLE, A CUSTOM TAB SYSTEM IS USED FOR THE IOS PLATFORM-->
 	<Window id="tabGroup" platform="ios">
-		<RightNavButtons platform="ios">
-			<View height="Ti.UI.SIZE">
+		<RightNavButtons>
+			<View>
 				<Button id="navInfo" backgroundImage="/images/question30.png" onClick="Alloy.Globals.openProviderMessage" />
 			</View>
-			<View width=55 height="Ti.UI.SIZE">
+			<View width=55>
 				<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
 			</View>
-			<View height="Ti.UI.SIZE">
+			<View>
 				<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
 			</View>
 		</RightNavButtons>
