--- a/app/views/providerDetail.xml
+++ b/app/views/providerDetail.xml
@@ -1,16 +1,16 @@
 <Alloy>
 	<Window id="win" onOpen="Alloy.Globals.updateActionBar">
 		<RightNavButtons platform="ios">
-			<View height="Ti.UI.SIZE">
+			<View>
 				<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
 			</View>
-			<View width=55 height="Ti.UI.SIZE">
+			<View width=55>
 				<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
 			</View>
-			<View width=45 height="Ti.UI.SIZE">
+			<View width=45>
 				<Button id="navShare" backgroundImage="/images/social24.png" onClick="iosShare"  />
 			</View>
-			<View width=45 height="Ti.UI.SIZE">
+			<View width=45>
 				<Button id="navFavorite" backgroundImage="/images/star129.png" onClick="tagAsFavorite"  />
 			</View>
 		</RightNavButtons>
