--- a/app/views/serviceProviders.xml
+++ b/app/views/serviceProviders.xml
@@ -18,14 +18,14 @@
 	
 	<!--IN ORDER FOR QUICK HIDE AND TRUSTED CONTACT BUTTONS TO BE VISIBLE, A CUSTOM TAB SYSTEM IS USED FOR THE IOS PLATFORM-->
 	<Window id="tabGroup" platform="ios">
-		<RightNavButtons platform="ios">
-			<View height="Ti.UI.SIZE">
+		<RightNavButtons>
+			<View>
 				<Button id="navInfo" backgroundImage="/images/question30.png" onClick="Alloy.Globals.openProviderMessage" />
 			</View>
-			<View width=45 height="Ti.UI.SIZE">
+			<View width=45>
 				<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
 			</View>
-			<View height="Ti.UI.SIZE">
+			<View>
 				<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
 			</View>
 		</RightNavButtons>
