--- a/app/views/specializedServicesMenu.xml
+++ b/app/views/specializedServicesMenu.xml
@@ -1,10 +1,10 @@
 <Alloy>
 	<Window class="container" id="win" onOpen="Alloy.Globals.updateActionBar">
 		<RightNavButtons platform="ios">
-			<View height="Ti.UI.SIZE">
+			<View>
 				<Button id="navHelp" backgroundImage="/images/add126.png" onClick="Alloy.Globals.sendTextMessage"/>
 			</View>
-			<View width=55 height="Ti.UI.SIZE">
+			<View width=55>
 				<Button id="navHide" backgroundImage="/images/blind2.png" onClick="Alloy.Globals.hideScreen" />
 			</View>
 		</RightNavButtons>
