fixed sms and gallery permissions, keyboard will now hide on iOS filter if you click "cancel"

--- a/app/views/countySelectorView.xml
+++ b/app/views/countySelectorView.xml
@@ -1,5 +1,5 @@
 <Alloy>
-	<SearchBar id="searchBar" hintText="Search"/>
+	<SearchBar id="searchBar" hintText="Search" showCancel="true"/>
 	<ScrollView scrollType="vertical" >
 		<View id="countiesPicker"/>
 	</ScrollView>
