added ability to open companion app from tools menu

--- a/app/views/corrections.xml
+++ b/app/views/corrections.xml
@@ -11,6 +11,8 @@
 				description="VINE allows crime victims to obtain timely and reliable information about criminal cases and the custody status of offenders 24 hours a day."
 				website="https://www.vinelink.com/"
 				hasApp=true
+				itunesUrl="itunes.apple.com/us/app/vinemobile/id625472495?mt=8"
+				androidUrl="com.appriss.vinemobile"
 				orgName="Victim Information and Notification Everyday"/>
 		</Tab>
 	</TabGroup>
