--- a/app/views/account.xml
+++ b/app/views/account.xml
@@ -32,7 +32,7 @@
 		<ScrollableView id="profileScroll" scrollingEnabled="false">
 			<View layout="vertical">
 				<Label class="headerLabel">PROFILE SUMMARY</Label>
-				<ScrollView height="70%" layout="vertical" showVerticalScrollIndicator=true>
+				<ScrollView height="70%" layout="vertical" scrollType="vertical" showVerticalScrollIndicator=true>
 					<View layout="horizontal" width="90%" top="5dp" height=Ti.UI.SIZE platform="android">
 						<Label class="sentence">My name is</Label>
 						<TextField id="nameField" class="sentence" editable=false focusable=false value="{profileBasics.name}" onClick="updateProfile"/>
